tests/pos/misc/poly-05.ts

function idp<A>(x: A): A { return x; }

var f : (x: string) => string = idp;

assert(f("a") === "a");

